---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "third-party1:10.0.0": [
      {
        "AuditConflict": {
          "audit": {
            "criteria": "safe-to-deploy",
            "delta": "3.0.0 -> 5.0.0",
            "notes": null,
            "version": null,
            "violation": null
          },
          "audit_source": "Local",
          "violation": {
            "criteria": "safe-to-run",
            "delta": null,
            "notes": null,
            "version": null,
            "violation": "=5.0.0"
          },
          "violation_source": "Local"
        }
      },
      {
        "AuditConflict": {
          "audit": {
            "criteria": "safe-to-deploy",
            "delta": "5.0.0 -> 10.0.0",
            "notes": null,
            "version": null,
            "violation": null
          },
          "audit_source": "Local",
          "violation": {
            "criteria": "safe-to-run",
            "delta": null,
            "notes": null,
            "version": null,
            "violation": "=5.0.0"
          },
          "violation_source": "Local"
        }
      }
    ]
  }
}
